# set-gps-time

./: Cargo.toml  readme.md
src/: main.rs
